@@ -41,6 +41,7 @@ General Fixes:
 - fixed weird error where apprentice quest couldn't be solved even though all conditions were met
 - Quest 'Up to Relendel' now gets properly closed
 - Water Mages perform their old work after 'Pest' quest
+- Jackal's Quest now fails in chapter 4 if not already completed
 
 
 
